js/src/threading/ProtectedData.cpp
@@ -79,7 +79,7 @@ CheckZoneGroup<Helper>::check() const
 
     JSContext* cx = TlsContext.get();
     if (group) {
-        if (group->usedByHelperThread) {
+        if (group->usedByHelperThread()) {
             MOZ_ASSERT(group->ownedByCurrentThread());
         } else {
             // This check is disabled on windows for the same reason as in
